--- a/jeaf-generator-test-services-api/pom.xml
+++ b/jeaf-generator-test-services-api/pom.xml
@@ -66,6 +66,7 @@
 
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<generateServiceInterfaces>true</generateServiceInterfaces>
+					<suppressTechnicalHeaders>true</suppressTechnicalHeaders>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
