--- a/jeaf-generator-test-services-impl/pom.xml
+++ b/jeaf-generator-test-services-impl/pom.xml
@@ -97,6 +97,7 @@
 
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<generateComponentImpls>true</generateComponentImpls>
+					<suppressTechnicalHeaders>true</suppressTechnicalHeaders>
 					
 
 					<!-- Define information that are written to file headers -->
