--- a/jeaf-generator-test-rest/pom.xml
+++ b/jeaf-generator-test-rest/pom.xml
@@ -92,6 +92,7 @@
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<generateRESTResources>true</generateRESTResources>
 					<restPathPrefix>/nova/prefix</restPathPrefix>
+					<suppressTechnicalHeaders>true</suppressTechnicalHeaders>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
