--- a/jeaf-generator-test-services-api-runtime/pom.xml
+++ b/jeaf-generator-test-services-api-runtime/pom.xml
@@ -72,6 +72,7 @@
 
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<generateServiceProxies>true</generateServiceProxies>
+					<suppressTechnicalHeaders>true</suppressTechnicalHeaders>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
