All scearios with direct header params now covered

--- a/jeaf-generator-test-jeaf-rest-proxy/pom.xml
+++ b/jeaf-generator-test-jeaf-rest-proxy/pom.xml
@@ -188,6 +188,7 @@
 					<makePOJOsSerializable>true</makePOJOsSerializable>
 					<generateJSONSerializers>true</generateJSONSerializers>
 					<generateJacksonAnnotations>true</generateJacksonAnnotations>
+					<suppressTechnicalHeaders>true</suppressTechnicalHeaders>
 
 					<generateRESTServiceProxies>true</generateRESTServiceProxies>
 					<generatePublicObjectView>true</generatePublicObjectView>
