--- a/jeaf-generator-test-spring-rest-proxy/pom.xml
+++ b/jeaf-generator-test-spring-rest-proxy/pom.xml
@@ -156,6 +156,7 @@
 					<generatePublicObjectView>true</generatePublicObjectView>
 					<generateRESTServiceProxies>true</generateRESTServiceProxies>
 					<generateRESTServiceProxyConfigFile>true</generateRESTServiceProxyConfigFile>
+					<suppressTechnicalHeaders>true</suppressTechnicalHeaders>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
