Technical headers now are also supported in case of bean params

--- a/jeaf-generator-test-open-api-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-service-objects/pom.xml
@@ -139,6 +139,7 @@
 					
 					<generatePublicObjectView>true</generatePublicObjectView>
 					<enableDetailedToStringMethod>true</enableDetailedToStringMethod>
+					<suppressTechnicalHeaders>true</suppressTechnicalHeaders>
 					
 					<disableImmutabilityOfBinaryData>true</disableImmutabilityOfBinaryData>
 					<disableImmutabilityOfArrays>true</disableImmutabilityOfArrays>
