--- a/jeaf-generator-test-open-api-internal-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-internal-service-objects/pom.xml
@@ -156,6 +156,7 @@
 					<disableImmutabilityOfCollections>true</disableImmutabilityOfCollections>
 					
 					<generateBuilderWithAllMandatoryFields>true</generateBuilderWithAllMandatoryFields>
+					<suppressTechnicalHeaders>true</suppressTechnicalHeaders>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
