REST Service Proxies now support custom headers

--- a/jeaf-generator-test-spring-jersey/.classpath
+++ b/jeaf-generator-test-spring-jersey/.classpath
@@ -53,5 +53,10 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry excluding="**" kind="src" output="target/classes" path="src-gen/main/resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
