Improved templates. No code changes

--- a/jeaf-generator-test-service-objects/pom.xml
+++ b/jeaf-generator-test-service-objects/pom.xml
@@ -25,6 +25,13 @@
 			<artifactId>jeaf-core-api</artifactId>
 			<version>${jeaf.core.api.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>${javaee-api.version}</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>com.anaptecs.jeaf.uml</groupId>
