--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -184,6 +184,9 @@ components:
         - bookingID
       properties:
         bookingID:
+          description: >-
+            ID of the booking
+            Type represents a booking ID.
           type: string
           nullable: false
 
