--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -1243,6 +1243,34 @@ paths:
           $ref: '#/components/responses/CustomErrorResponse'
     
 
+  /products/testNotInlinedBeanParam:
+    post:
+      operationId: testNotInlinedBeanParam
+      parameters:
+        - name: header
+          in: header
+          required: true
+          schema:
+            type: string
+        - name: doubleCode
+          in: header
+          required: true
+          schema:
+            type: string
+        - name: extensibleEnum
+          in: header
+          required: true
+          schema:
+            type: string
+      responses:
+    
+    
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
+    
+
 
 security:
   - {}
