--- a/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
@@ -1243,6 +1243,27 @@ paths:
           $ref: '#/components/responses/CustomErrorResponse'
     
 
+  /products/testStringArray:
+    post:
+      operationId: testPrimitiveArray
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                type: integer
+                format: int32
+      responses:
+    
+    
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
+    
+
 
 security:
   - {}
