--- a/jeaf-generator-test-domain-objects/pom.xml
+++ b/jeaf-generator-test-domain-objects/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.6.83</version>
+		<version>1.6.84-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test Domain Objects</name>
