Implemented support for multivalued query params for basic types (not data types yet)

--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
 		<jeaf.json.api.version>1.6.15</jeaf.json.api.version>
 		<jeaf.json.impl.version>1.6.16</jeaf.json.impl.version>
 		<jeaf.jersey.extensions.version>1.6.0</jeaf.jersey.extensions.version>
-		<jeaf.rest.api.version>1.6.2</jeaf.rest.api.version>
-		<jeaf.rest.impl.version>1.6.2.1</jeaf.rest.impl.version>
+		<jeaf.rest.api.version>1.6.3-SNAPSHOT</jeaf.rest.api.version>
+		<jeaf.rest.impl.version>1.6.3-SNAPSHOT</jeaf.rest.impl.version>
 		<jeaf.test.model.version>1.0.55-SNAPSHOT</jeaf.test.model.version>
 		<jeaf.generator.messages.version>1.6.3</jeaf.generator.messages.version>
 		
