--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 		<jeaf.rest.api.version>1.6.3-SNAPSHOT</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>1.6.3-SNAPSHOT</jeaf.rest.impl.version>
 		<jeaf.test.model.version>1.0.55-SNAPSHOT</jeaf.test.model.version>
-		<jeaf.generator.messages.version>1.6.3</jeaf.generator.messages.version>
+		<jeaf.generator.messages.version>1.6.4-SNAPSHOT</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>2.7.6</spring.boot.version>
