Implemented soft links for POJO

--- a/jeaf-generator-test-open-api-internal-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-internal-service-objects/pom.xml
@@ -155,6 +155,8 @@
 					<disableImmutabilityOfArrays>true</disableImmutabilityOfArrays>
 					<disableImmutabilityOfCollections>true</disableImmutabilityOfCollections>
 					
+					<customGenericSoftLinkType>com.anaptecs.jeaf.junit.openapi.base.SoftLink</customGenericSoftLinkType>
+					
 					<generateBuilderWithAllMandatoryFields>true</generateBuilderWithAllMandatoryFields>
 					<suppressTechnicalHeaders>true</suppressTechnicalHeaders>
 
