--- a/jeaf-generator-test-service-objects/pom.xml
+++ b/jeaf-generator-test-service-objects/pom.xml
@@ -83,6 +83,8 @@
 					<generateServiceObjects>true</generateServiceObjects>
 					<generateExceptionClasses>true</generateExceptionClasses>
 					<generateCustomConstraints>true</generateCustomConstraints>
+					
+					<customGenericSoftLinkType>com.anaptecs.jeaf.junit.openapi.base.SoftLink</customGenericSoftLinkType>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
