--- a/jeaf-generator-test-open-api-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-service-objects/pom.xml
@@ -144,6 +144,8 @@
 					<disableImmutabilityOfBinaryData>true</disableImmutabilityOfBinaryData>
 					<disableImmutabilityOfArrays>true</disableImmutabilityOfArrays>
 					<disableImmutabilityOfCollections>true</disableImmutabilityOfCollections>
+					
+					<customGenericSoftLinkType>com.anaptecs.jeaf.junit.openapi.base.SoftLink</customGenericSoftLinkType>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
