--- a/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
@@ -255,10 +255,6 @@ components:
       required:
         - moreLinks
       properties:
-        discountOffers:
-          type: array
-          items:
-            type: string
         theLink:
           type: integer
           format: int64
@@ -270,6 +266,11 @@ components:
             format: int64
           deprecated: true
           nullable: false
+        discountOffers:
+          type: array
+          items:
+            type: string
+          deprecated: true
 
     # com.anaptecs.jeaf.junit.openapi.base.Channel
     Channel:
@@ -1523,6 +1524,7 @@ components:
         - objectType
         - name
         - index
+        - theSoftLink
       properties:
         objectType:
           description: Attribute is used as discriminator for inheritance between data types.
@@ -1539,6 +1541,9 @@ components:
           format: int32
           maximum: 32
           minimum: 0
+          nullable: false
+        theSoftLink:
+          type: string
           nullable: false
 
     # com.anaptecs.jeaf.junit.openapi.base.StopPlaceRef
