--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -1284,6 +1284,160 @@ paths:
           $ref: '#/components/responses/CustomErrorResponse'
     
 
+  /products/testPrimitiveArrayAsQueryParam:
+    get:
+      operationId: testPrimitiveArrayAsQueryParam
+      parameters:
+        - name: intValues
+          in: query
+          required: true
+          schema:
+            type: array
+            items:
+              type: integer
+              format: int32
+      responses:
+        '200':
+          description: >-
+            TODO: Please add comment for response
+          content:
+            application/json:
+              schema:
+                type: string
+          headers:
+            X-Global-Response-Header:
+              schema:
+                type: string
+                default: 'Hello World'
+    
+    
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
+    
+
+  /products/big-decimal-codes-header:
+    get:
+      operationId: testMultivaluedHeader
+      parameters:
+        - name: pCodes
+          in: header
+          schema:
+            type: array
+            items:
+              type: number
+              format: double
+      responses:
+        '200':
+          description: >-
+            TODO: Please add comment for response
+          content:
+            application/json:
+              schema:
+                type: string
+          headers:
+            X-Global-Response-Header:
+              schema:
+                type: string
+                default: 'Hello World'
+    
+    
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
+    
+
+  /products/big-decimal-codes-query:
+    get:
+      operationId: testMultivaluedQueryParams
+      parameters:
+        - name: pCodes
+          in: query
+          schema:
+            type: array
+            items:
+              type: number
+              format: double
+        - name: pEnums
+          in: query
+          schema:
+            type: array
+            items:
+              $ref: '../base/product-base.yml#/components/schemas/BooleanLiteralsEnum'
+      responses:
+        '200':
+          description: >-
+            TODO: Please add comment for response
+          content:
+            application/json:
+              schema:
+                type: string
+          headers:
+            X-Global-Response-Header:
+              schema:
+                type: string
+                default: 'Hello World'
+    
+    
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
+    
+
+  /products/testMulitValuedBeanParams:
+    get:
+      operationId: testMulitValuedBeanParams
+      parameters:
+        - name: stringCodeHeader
+          in: header
+          schema:
+            type: array
+            items:
+              type: string
+        - name: longCodeQueryParam
+          in: query
+          schema:
+            type: array
+            items:
+              type: integer
+              format: int64
+        - name: literals
+          in: query
+          required: true
+          schema:
+            type: array
+            minItems: 1
+            items:
+              $ref: '../base/product-base.yml#/components/schemas/BooleanLiteralsEnum'
+        - name: pTheEnum
+          in: query
+          required: true
+          schema:
+            $ref: '../base/product-base.yml#/components/schemas/BooleanLiteralsEnum' 
+      responses:
+        '200':
+          description: >-
+            TODO: Please add comment for response
+          content:
+            application/json:
+              schema:
+                type: string
+          headers:
+            X-Global-Response-Header:
+              schema:
+                type: string
+                default: 'Hello World'
+    
+    
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
+    
+
 
 security:
   - {}
