--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,12 @@
 		<jeaf.jersey.extensions.version>1.6.0</jeaf.jersey.extensions.version>
 		<jeaf.rest.api.version>1.6.3</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>1.6.3</jeaf.rest.impl.version>
-		<jeaf.test.model.version>1.0.56-SNAPSHOT</jeaf.test.model.version>
-		<jeaf.generator.messages.version>1.6.5-SNAPSHOT</jeaf.generator.messages.version>
+		<jeaf.test.model.version>1.0.57-SNAPSHOT</jeaf.test.model.version>
+		<jeaf.generator.messages.version>1.6.5</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
-		<spring.boot.version>2.7.6</spring.boot.version>
-		<spring.core.version>5.3.24</spring.core.version>
+		<spring.boot.version>2.7.8</spring.boot.version>
+		<spring.core.version>5.3.25</spring.core.version>
 	</properties>
 
 	<modules>
