Success status code are now configurable

--- a/jeaf-generator-test-custom-extension-usage/pom.xml
+++ b/jeaf-generator-test-custom-extension-usage/pom.xml
@@ -78,6 +78,8 @@
 					<generateOpenAPISpec>true</generateOpenAPISpec>
 					<addIgnoredHeadersToOpenAPISpec>true</addIgnoredHeadersToOpenAPISpec>
 					<openAPICommentStyle>&gt;-</openAPICommentStyle>
+					<restDefaultSuccessStatusCode>201</restDefaultSuccessStatusCode>
+					<restDefaultVoidStatusCode>202</restDefaultVoidStatusCode>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
