Fixed caching problem in Maven Plugin

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<jeaf.json.impl.version>1.6.16</jeaf.json.impl.version>
 		<jeaf.jersey.extensions.version>1.6.0</jeaf.jersey.extensions.version>
 		<jeaf.rest.api.version>1.6.3</jeaf.rest.api.version>
-		<jeaf.rest.impl.version>1.6.3</jeaf.rest.impl.version>
+		<jeaf.rest.impl.version>1.6.4-SNAPSHOT</jeaf.rest.impl.version>
 		<jeaf.test.model.version>1.0.58</jeaf.test.model.version>
 		<jeaf.generator.messages.version>1.6.5</jeaf.generator.messages.version>
 		
