--- a/jeaf-generator-test-open-api-service-objects/.settings/org.eclipse.core.resources.prefs
+++ b/jeaf-generator-test-open-api-service-objects/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,7 @@ encoding//src-gen/main/java=UTF-8
 encoding//src-gen/main/resources=UTF-8
 encoding//src-gen/test/java=UTF-8
 encoding//src-gen/test/resources=UTF-8
+encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/test/java=UTF-8
 encoding//src/test/resources=UTF-8
